infrastructure/kubernetes/zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ironmind-zookeeper
  namespace: ironmind
spec:
  selector:
    app: ironmind-zookeeper
  ports:
    - protocol: TCP
      port: 2181
      targetPort: 2181
  type: ClusterIP
